# floe

./: .gitignore  .prettierignore  AGENTS.md  ASR_AUDIT_REPORT.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  audit-report.md  eslint.config.js  floe.spec  index.html  libpolicy.rlib  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml  update-aur.yml
docs/: ASR_ARCHITECTURE.md  nemotron-streaming-benchmark.md
src/: App.test.tsx  App.tsx  Root.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  contract.rs  experiments.rs  integration_tests.rs  lib.rs  lifecycle.rs  main.rs  settings.rs  update.rs
src-tauri/src/asr/: backend.rs  error.rs  fallback.rs  mock_sidecar.rs  mod.rs  model.rs  policy.rs  registry.rs  state.rs  traits.rs  types.rs
src-tauri/src/asr/adapters/: groq.rs  mod.rs  model_cache.rs  onnx.rs  onnx_runtime.rs
src-tauri/src/asr/runtime/: mod.rs
src-tauri/src/asr/tests/: diagnostics_tests.rs  fallback_tests.rs  mod.rs  onnx_tests.rs  policy_tests.rs  privacy_tests.rs  provider_selection.rs
src-tauri/src/audio/: levels.rs  mod.rs
src-tauri/src/commands/: app.rs  bubble.rs  cleanup.rs  clipboard.rs  diag.rs  hotkey.rs  mod.rs  recording.rs  settings.rs  transcription.rs  update.rs
src-tauri/src/diag/: context.rs  event.rs  logger.rs  mod.rs  report.rs  storage.rs  tracer.rs
src-tauri/src/prompts/: cleanup.rs
src-tauri/src/providers/: cerebras.rs  cleanup.rs  groq.rs  http.rs  mod.rs  stt.rs
src-tauri/src/providers/groq/: cleanup.rs  mod.rs  stt.rs  tests.rs  types.rs  util.rs
src-tauri/src/recording/: buffer.rs  error.rs  input.rs  mod.rs  sample.rs  types.rs  wav.rs
src-tauri/src/system/: autostart.rs  hotkey.rs  mod.rs  overlay.rs  single_instance.rs  startup.rs  tray.rs  window.rs
src-tauri/src/test_helpers/: asr.rs  cleanup.rs  clipboard.rs  mod.rs  recording.rs  settings.rs
src-tauri/tests/: contract_tests.rs
src/components/: ApiKeyRow.tsx  ApiKeySetupStep.test.tsx  ApiKeySetupStep.tsx  AppShell.tsx  AudioBars.test.tsx  AudioBars.tsx  DiagnosticsSection.test.tsx  DiagnosticsSection.tsx  GroqSetupStep.test.tsx  GroqSetupStep.tsx  HotkeyRow.test.tsx  HotkeyRow.tsx  HotkeySetupStep.test.tsx  HotkeySetupStep.tsx  OnboardingView.test.tsx  OnboardingView.tsx  OverviewView.test.tsx  OverviewView.tsx  PrivacyNote.tsx  RecordingBubble.test.tsx  RecordingBubble.tsx  SettingsView.test.tsx  SettingsView.tsx  StartAtLoginRow.tsx  StatusView.tsx  UpdateSection.test.tsx  UpdateSection.tsx
src/hooks/: useBubbleRecordingActive.test.tsx  useBubbleRecordingActive.ts  usePushToTalk.test.tsx  usePushToTalk.ts  useRecordingEvents.ts  useRecordingLevel.test.tsx  useRecordingLevel.ts  useReducedMotionPreference.ts  useRollingWaveform.test.tsx  useRollingWaveform.ts
src/lib/: clipboardErrors.ts  contract.test.ts  contract.ts  diagnostics.test.ts  diagnostics.ts  diagnosticsReport.test.ts  diagnosticsReport.ts  errorLog.test.ts  errorLog.ts  errors.test.ts  errors.ts  hotkeyCapture.test.ts  hotkeyCapture.ts  models.ts  privacy.test.ts  privacy.ts  pushToTalk.test.ts  pushToTalk.ts  recording.test.ts  recording.ts  recordingBubble.test.ts  recordingBubble.ts  recordingErrors.ts  setupState.test.ts  setupState.ts  shadcn-theme.css  status.test.ts  status.ts  tauri.test.ts  tauri.ts  transcriptCleanup.test.ts  transcriptCleanup.ts  waveform.test.ts  waveform.ts  windowLabel.ts
src/stores/: recording.ts  useFloeStore.ts  (+1 more)
(+21 files in other folders)
