[package]
name = "floe"
version = "0.1.0"
description = "Minimal push-to-talk transcription utility"
authors = ["Floe Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "floe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.17.3"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["time"] }
enigo = "0.6"
tauri-plugin-global-shortcut = "2.3.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
