[package]
name = "floe"
version = "0.1.0"
description = "Minimal push-to-talk transcription utility"
authors = ["Floe Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "floe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.17.3"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
enigo = "0.6"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-autostart = "2"
futures-util = "0.3"
getrandom = "0.2"
tokio-tungstenite = "0.24"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
