[package]
name = "floe"
version = "0.1.0"
description = "Minimal push-to-talk transcription utility"
authors = ["Floe Contributors"]
license = "MIT"
edition = "2021"
default-run = "floe"

[lib]
name = "floe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "floe"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.18.1"
async-trait = "0.1"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
parking_lot = "0.12"
log = { version = "0.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "config-json5"] }
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
enigo = "0.6"
sysinfo = "0.33"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tempfile = "3"
